# llmstxt-standalone

./: .pre-commit-config.yaml  NOTICE  README.md  pyproject.toml  ruff.toml
.github/: codecov.yml  renovate.json5
.github/workflows/: ci.yml  release.yml  zizmor.yml
src/llmstxt_gen/: cli.py  config.py  generate.py
src/llmstxt_standalone/: cli.py  config.py  convert.py  generate.py
src/llmstxt_standalone/config/: __init__.py  derive.py  load.py  model.py  plugin.py
tests/: test_adversarial.py  test_cli.py  test_config.py  test_convert.py  test_example.py  test_generate.py  test_robustness.py  test_smoke.py
tests/fixtures/: mkdocs_edge_cases.yml  mkdocs_empty_llmstxt.yml  mkdocs_mapping_plugins.yml  mkdocs_nav_bare_strings.yml  mkdocs_nav_only.yml  mkdocs_no_nav.yml  mkdocs_section_index.yml  mkdocs_sections_value_nonstring_item.yml  mkdocs_sections_value_string.yml  mkdocs_with_llmstxt.yml  mkdocs_with_python_tags.yml
tests/fixtures/site/: index.html
tests/fixtures/site/install/: index.html
tests/fixtures/site_edge_cases/: index.html
tests/fixtures/site_edge_cases/deep/: index.html
tests/fixtures/site_edge_cases/faq/: index.html
tests/fixtures/site_edge_cases/install/: index.html
